--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- desgin by : didi triawan -->
+<!-- plugin bootstrap 3.3.7 -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -9,7 +11,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Full Slider - Start Bootstrap Template</title>
+    <title>Projek Frontend</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="/projek_front_end2/css/bootstrap.min.css" rel="stylesheet">
