--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <a href="#">Contacts</a>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-gears"></i></a>
+                        <a href="#"><i class="fa fa-gear"></i></a>
                     </li>
                 </ul>
             </div>
