--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="http://disputebills.com"><img style="margin-right: 10px; padding: 0; width: 60px;" src="/projek_front_end2/img/tutwuri.jpg" alt="Dispute Bills">
+                <a class="navbar-brand" href="http://disputebills.com"><img style="margin-right: 10px; padding: 0; width: 200px; height: 200px; border-bottom-left-radius:20px;border-bottom-right-radius:20px;" src="/projek_front_end2/img/tutwuri.jpg" alt="Dispute Bills">
                   </a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
