--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <!-- Custom CSS -->
     <link href="/projek_front_end2/css/full-slider.css" rel="stylesheet">
     <link href="/projek_front_end2/css/style.css" rel="stylesheet">
+
+    <!-- font awesome -->
     <link href="/projek_front_end2/font/css/font-awesome.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -26,7 +28,6 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-
 </head>
 <body>
     <!-- Navigation -->
@@ -40,14 +41,22 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">GOVRNMNT</a>
+                <a class="navbar-brand" href="http://disputebills.com"><img style="margin-right: 10px; padding: 0; width: 60px;" src="/projek_front_end2/img/tutwuri.jpg" alt="Dispute Bills">
+                  </a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href="#">Projects</a>
-                    </li>
+                  <li class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">Projects
+                        <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                          <li><a href="#">Page 1-1</a></li>
+                          <li><a href="#">Page 1-2</a></li>
+                          <li><a href="#">Page 1-3</a></li>
+                      </ul>
+                  </li>
+                <ul class="nav navbar-nav navbar-right">
                     <li>
                         <a href="#">Event</a>
                     </li>
@@ -624,24 +633,20 @@
             <div class="row">
                 <div class="col-md-4"></div>
                 <div class="col-md-3">
-                    <img src="/projek_front_end2/img/tut.jpg" style="" class="image-footer"> <br>
-                    <p class="text-black" style="margin-left: 40px;"><b>Kementrian <br>
-                    Pendidikan</b></p>
+                    <img src="/projek_front_end2/img/tutwuri.jpg" style="height: 40vh; width: 30vh;" class="image-footer"> <br>
                 </div>
-                <div >
+                <div style="height: 100px;">
                     <h1 class="text-black">Direktorat Pembinaan SMP</h1>
                     <p class="text-black">
                         Direktorat Pembinaan SMP <br>
                         Direktorat Jendral pendidikan dasar dan menengah <br>
                         Kementrian pendidikan dan kebudayaanbr <br>
                         Jalan Jendral sudirman Gedung E lantai 17 <br>
-                        Senayan jakarta pusat
-                    </p>
+                        Senayan jakarta pusat </p>
                 </div>
             </div>
         </div>        
     </footer><!-- End footer -->
-
     <!-- jQuery -->
     <script src="/projek_front_end2/js/jquery.js"></script>
     <!-- Bootstrap Core JavaScript -->
