--- a/index.html
+++ b/index.html
@@ -640,7 +640,7 @@
                     <p class="text-black">
                         Direktorat Pembinaan SMP <br>
                         Direktorat Jendral pendidikan dasar dan menengah <br>
-                        Kementrian pendidikan dan kebudayaanbr <br>
+                        Kementrian pendidikan dan kebudayaan <br>
                         Jalan Jendral sudirman Gedung E lantai 17 <br>
                         Senayan jakarta pusat </p>
                 </div>
