--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="http://disputebills.com"><img style="margin-right: 10px; padding: 0; width: 60px;" src="/projek_front_end2/img/tutwuri.jpg" alt="Dispute Bills">
+                <a class="navbar-brand" href="http://disputebills.com"><img style="margin-right: 10px; width: 200px; height: 200px; padding-bottom: 10px;float: left;" src="/projek_front_end2/img/tutwuri.jpg" alt="Dispute Bills">
                   </a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -669,6 +669,13 @@
         $(".transition-timer-carousel-progress-bar", "#transition-timer-carousel")
         .css("width", "100%");
     });
+    $(window).scroll(function() {
+          if ($(document).scrollTop() > 50) {
+            $('nav').addClass('shrink');
+          } else {
+            $('nav').removeClass('shrink');
+          }
+        });
     </script>
 </body>
 </html>
